--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <application android:allowBackup="true"
                  android:icon="@drawable/moviedb_logo"
                  android:supportsRtl="false"
+                 android:label="The Movie Database"
                  android:theme="@style/AppTheme">
     
         <activity android:name=".ui.MainActivity">
