--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     
     <application android:allowBackup="true"
-                 android:icon="@drawable/moviedb_logo"
+                 android:icon="@drawable/icon"
+                 android:roundIcon="@drawable/icon_round"
                  android:supportsRtl="false"
                  android:label="The Movie Database"
+                 android:name=".MainApplication"
                  android:theme="@style/AppTheme">
     
         <activity android:name=".ui.MainActivity">
